--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@
 </nav>
 </div>
 
-<div id="msgprev">
-<p id="attention">Attention ce site est en cours de développement, certaines parties du site sont incomplètes !!!</p>
-</div>
+
 <section id="bienvenue">
 
-<center><img alt="photo du propriétaire du site" src="IMG/image_presentation.jpg"/><p><b>Bienvenue sur mon portfolio !!!<br><br>
+<center><img alt="photo du propriétaire du site" src="IMG/image_presentation.jpg"/><p><b>Bienvenue sur mon portfolio !<br><br>
 Je vous invite à vous diriger sur ma page <a href="Qui_suis_je.html" id="ici">Qui suis-je ?</a></b><br><br>
 <a href="IMG/cvStageBTS.pdf"><button id="cv">Télécharger cv</button></a>
 </p></center>
