--- a/Mes_competences.html
+++ b/Mes_competences.html
@@ -20,70 +20,29 @@
 <li class="listemenu"><a href="Contact.html" class="lienpages"><button class="onglet">Contact</button></a></li>
 </ul>
 </nav>
+</div> 
+
+<div id="sousmenu">
+<nav>
+    <ul id="nav">
+        <li class="listesousmenu"><a href="#competence-gen" class="partiepages"><button class="sous-onglet">Compétences générales</button></a></li>
+        <li class="listesousmenu"><a href="#competence-dev" class="partiepages"><button class="sous-onglet">Compétences en développement d'applications</button></a></li>
+        <li class="listesousmenu"><a href="#competence-res" class="partiepages"><button class="sous-onglet">Compétences liées aux infrastructures réseau</button></a></li>
+    </ul>
+</nav>
 </div>
-<!--
-<div id="competences">
-<ul>
-<li id="uo"><button>Support système des accès utilisateurs</button></li>
-<div id="test">Comparer les caractéristiques de solutions techniques d’accès à des services en ligne <br>
 
-Justifier le choix d’une solution technique d’accès <br>
+<div id="competence-gen">
 
-Installer un composant logiciel <br>
-
-Exploiter les fonctions de base d’un langage de commandes <br>
-
-Installer un applicatif <br>
-
-Exploiter un environnement de travail collaboratif <br>
-
-Valider et documenter une solution technique d'accès </div>
-<li><button>Support réseau des utilisateurs</button></li>
-<div>Caractériser les éléments d’interconnexion d’un réseau <br>
-
-Installer et configurer un élément d’interconnexion (commutateur)<br> 
-
-Exploiter un service de base(cisco packet tracer)<br>
-
-Analyser des unités de données de protocole<br> 
-
-Vérification de la connectivité d’un réseau </div>
-<li><button>Exploitation des données</button></li>
-<div>Extraire et modifier les données d’une base de données <br>
-
-Implémenter une base de données à partir d’un schéma existant <br>
-
-Configurer les droits d’accès à une base de données </div>
-<li><button>Base de la programmation</button></li>
-<div>Programmer en utilisant des classes d’objets fournies <br>
-
-Programmer à l’aide d’un langage de programmation structurée <br>
-
-Appliquer des normes de développement <br>
-
-Connaissances de base en programmation  </div>
-<li><button>Languages informatiques utilisées</button></li>
-<div>Html <br>
-
-CSS <br>
-
-C# <br>
-
-MySQL <br> 
-
-Php  
- </div>
-<li><button>Logiciels utilisés</button></li>
-<div>Cisco Packet Tracer <br>
-
-Visual studio <br>
-
-Notepad++ <br> 
-
-Wireshark </div>
-</ul>
 </div>
--->
+
+<div id="competence-dev">
+    
+</div>
+
+<div id="competence-res">
+    
+</div>
 <div id="ML">
 <a href="Mentions_legales_page.html" id="ml"> Mentions légales</a>
 </div>
