Check contact and skills

--- a/Mes_realisations.html
+++ b/Mes_realisations.html
@@ -15,7 +15,6 @@
 <li class="listemenu"><a href="Qui_suis_je.html" class="lienpages"><button class="onglet">Qui suis-je ?</button></a></li>
 <li class="listemenu"><a href="Mes_competences.html" class="lienpages"><button class="onglet">Compétences</button></a></li>
 <li class="listemenu"><a href="Mes_realisations.html" class="lienpages"><button class="onglet">Réalisations</button></a></li>
-<li class="listemenu"><a href="Mes_passions.html" class="lienpages"><button class="onglet">Passions</button></a></li>
 <li class="listemenu"><a href="Veille_technologique.html" class="lienpages"><button class="onglet">Veille technologique</button></a></li>
 <li class="listemenu"><a href="Contact.html" class="lienpages"><button class="onglet">Contact</button></a></li>
 </ul>
@@ -45,7 +44,7 @@
 <hr>
 <table class="tab">
 <tr class="ligne">
-<td class="cell">photo</td>
+<td class="cell">Photo de Pablo Picasso</td>
 <td class="cell">2019 : Réalisation d'un site statique sur Picasso</td>
 </tr>
 </table>
@@ -55,7 +54,7 @@
 <hr>
 <table class="tab">
 <tr class="ligne">
-<td class="cell">photo</td>
+<td class="cell"><img src="IMG/logoTerminaleSTMG.PNG"/></td>
 <td class="cell">2019 : Réalisation d'un site e-commerce avec base de données</td>
 </tr>
 </table>
