--- a/ecommerce.html
+++ b/ecommerce.html
@@ -2,15 +2,34 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>Projet Terminale STMG</title>
+<link rel="stylesheet" href="CSS/Qui_suis_je.css" />
+<link rel="stylesheet" href="CSS/menu.css" />
+<link rel="stylesheet" href="CSS/Mentions_legales.css" />
+<title>Qui suis-je ? </title>
 </head>
 <body>
-<div>
-<?php include("menu.php");?>
+<div id="menu">  
+<nav id="navigation">
+<ul id="listenonord">
+<li class="listemenu"><a href="index.html" class="lienpages"><button class="onglet">Accueil</button></a></li>
+<li class="listemenu"><a href="Qui_suis_je.html" class="lienpages"><button class="onglet">Qui suis-je ?</button></a></li>
+<li class="listemenu"><a href="Mes_competences.html" class="lienpages"><button class="onglet">Compétences</button></a></li>
+<li class="listemenu"><a href="Mes_realisations.html" class="lienpages"><button class="onglet">Réalisations</button></a></li>
+<li class="listemenu"><a href="Veille_technologique.html" class="lienpages"><button class="onglet">Veille technologique</button></a></li>
+<li class="listemenu"><a href="Contact.html" class="lienpages"><button class="onglet">Contact</button></a></li>
+</ul>
+</nav>
+</div>
+<div id=presentation>
+<div id="perso">
+<p>
+Dans le cadre de ma formation en terminale STMG option SIG, j'ai réalisé....
+</p> 
+</div>
+</div>
+<div id="ML">
+<a href="Mentions_legales_page.html" id="ml"> Mentions légales</a>
 </div>
 
-<div id="ML">
-<a href="Mentions_legales.php" id="ml"> Mentions légales</a>
-</div>
 </body>
 </html>
