Check Quisuis je

--- a/Qui_suis_je.html
+++ b/Qui_suis_je.html
@@ -23,12 +23,12 @@
 <div id=presentation>
 <div id="perso">
 <p>
-Bonjour et bienvenue sur mon Portfolio!<br><br>  
-Je m’appelle Axel GROUSSAUD, j’ai 21 ans, j’habite à Amancy et je suis étudiant en 2ème année de BTS SIO option SLAM au Lycée Saint Michel à Annecy après avoir obtenu un baccalauréat STMG option SIG en 2019.<br><br> 
-En tant que joueur de jeux vidéos amateur, depuis que je muscle mes doigts (surtout les pouces), je suis passionné par le développement et comprendre comment est créée une application. <br><br>
-J’aime  également faire des randonnées à pied, en vélos et en roller, histoire de prendre l’air !<br><br>
-Je suis créatif, persévérant et organisé. <br><br>
- Je vous invite à mieux me connaître en visitant mes pages… 
+<b>Bienvenue sur mon Portfolio!</b><br><br>  
+Je m’appelle <b>Axel GROUSSAUD</b>, j’ai <b>21 ans</b>, j’<b>habite</b> à <b>Annecy le Vieux</b> et je suis <b>étudiant</b> en <b>2ème année</b> de <b>BTS SIO option SLAM au Lycée Saint Michel</b> à <b>Annecy</b> après avoir <b>obtenu</b> un <b>baccalauréat STMG option SIG</b> en <b>2019</b>.<br><br> 
+En tant que <b>joueur de jeux vidéos amateur</b>, depuis que je <b>muscle</b> mes <b>doigts</b> (surtout les <b>pouces</b>), je suis <b>passionné</b> par le <b>développement</b> et <b>comprendre comment</b> est <b>créée</b> une <b>application</b>. <br><br>
+J’aime  également faire des <b>randonnées</b> à <b>pied</b>, en <b>vélos</b> et en <b>roller</b>, histoire de prendre l’air !<br><br>
+Je suis <b>créatif</b>, <b>persévérant</b> et <b>organisé.</b> <br><br>
+Je vous <b>invite</b> à <b>mieux</b> me <b>connaître</b> en <b>visitant</b> mes <b>pages…</b> 
 </p> 
 </div>
 </div>
