disposition et complet à 80%

--- a/Contact.html
+++ b/Contact.html
@@ -22,11 +22,26 @@
 </div>
 <div id="espace"></div>
 <div class="contact">
+    <div>
+        <p>Vous pouvez me contacter avec mon adresse mail professionnel :<br><br>
+        groussaudaxelpro@gmail.com</p>
 
+    </div>
 </div>
-<hr>
-<div class="contact">
+<div id="choix">
+    <center>
+        <div id="blank">
+            <p>OU</p>
+        </div>
+    </center>
+</div>
 
+<div class="contact">
+    <div>
+        <p>Vous pouvez me contacter sur LinkedIn :<br><br>
+        <a href="https://www.linkedin.com/in/axel-groussaud-7331a018a/">Mon compte LinkedIn</a></p>
+
+    </div>
 </div>
 <div id="ML">
 <a href="Mentions_legales_page.html" id="ml"> Mentions légales</a>
