--- a/Mes_realisations.html
+++ b/Mes_realisations.html
@@ -21,16 +21,47 @@
 </nav>
 </div>
 <div id="projets">
+
+    <table class="tab">
+        <tr class="ligne">
+        <td class="cell">photo</td>
+        <td class="cell">2021 : Réalisation d'une application tablette qui publie des photos, vidéos et commentaires</td>
+        </tr>
+        </table>
+        <div class="lienprojet">
+        <center><button class="btn"><a href="app_tablet.html" class="link">en savoir plus</a></button></center>
+        </div>
+</div>
+<hr>
 <table class="tab">
-<tr class="ligne">
-<td class="cell">photo</td>
-<td class="cell">2020 : Réalisation d'un portfolio</td>
-</tr>
-</table>
-<div class="lienprojet">
-<center><a href="portfolio.html">en savoir plus</a></center>
-</div>
-</div>
+    <tr class="ligne">
+    <td class="cell">photo</td>
+    <td class="cell">Janvier - Février 2021 : Stage chez NTN-SNR</td>
+    </tr>
+    </table>
+    <div class="lienprojet">
+    <center><button class="btn"><a href="stage_ntn_snr.html" class="link">en savoir plus</a></button></center>
+    </div>
+<hr>
+<table class="tab">
+    <tr class="ligne">
+    <td class="cell">photo</td>
+    <td class="cell">2020 : Réalisation d'une aplication de réservation</td>
+    </tr>
+    </table>
+    <div class="lienprojet">
+    <center><button class="btn"><a href="lsrgames_reservation_app.html" class="link">en savoir plus</a></button></center>
+    </div>
+<hr>
+<table class="tab">
+    <tr class="ligne">
+    <td class="cell">photo</td>
+    <td class="cell">2020 - 2021 : Réalisation d'un portfolio</td>
+    </tr>
+    </table>
+    <div class="lienprojet">
+    <center><button class="btn"><a href="portfolio.html" class="link">en savoir plus</a></button></center>
+    </div>
 <hr>
 <table class="tab">
 <tr class="ligne">
@@ -39,17 +70,17 @@
 </tr>
 </table>
 <div class="lienprojet">
-<center><a href="challenge_alexa.html">en savoir plus</a></center>
+<center><button class="btn"><a href="challenge_alexa.html" class="link">en savoir plus</a></button></center>
 </div>
 <hr>
 <table class="tab">
 <tr class="ligne">
 <td class="cell">Photo de Pablo Picasso</td>
-<td class="cell">2019 : Réalisation d'un site statique sur Picasso</td>
+<td class="cell">2019 - 2020 : Réalisation d'un site statique sur Picasso puis le rendre dynamique</td>
 </tr>
 </table>
 <div class="lienprojet">
-<center><a href="ppepicasso.html">en savoir plus</a></center>
+<center><button class="btn"><a href="ppepicasso.html" class="link">en savoir plus</a></button></center>
 </div>
 <hr>
 <table class="tab">
@@ -59,7 +90,7 @@
 </tr>
 </table>
 <div class="lienprojet">
-<center><a href="ecommerce.html">en savoir plus</a></center>
+<center><button class="btn"><a href="ecommerce.html" class="link">en savoir plus</a></button></center>
 </div>
 <div id="ML">
 <a href="Mentions_legales_page.html" id="ml"> Mentions légales</a>
