--- a/app_tablet.html
+++ b/app_tablet.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>Site statique / dynamique Picasso</title>
+<title>PPE App Tablet</title>
 <link rel="stylesheet" href="CSS/main_project.css" />
 <link rel="stylesheet" href="CSS/menu.css" />
 <link rel="stylesheet" href="CSS/Mentions_legales.css" />
@@ -22,17 +22,13 @@
         </div>
 <div id="home">
     <div id="description">
-        <p>
-            J'ai eu l'occasion de réaliser un site statique sur Picasso dans le cadre des projets personnels encadrés (PPE) du BTS SIO
-            option SLAM en première année au Lycée Saint Michel à Annecy. Pour réaliser ce site j'ai utilisé les languages HTML, CSS et Javascript avec la bibliothèque JQuerie. 
-            Le Javascript servait essentiellement à afficher des images aléatoire dans un carrousel. 
-            Ensuite j'ai fait évoluer le site en le rendant dynamique avec PHP. 
-        </p>
+        <p> Dans le cadre des projets personnels encadrés, j'ai eu l'occasion de concevoir une application au format tablette avec le framework Symfony. 
+            Cette application peut publier des photos, des vidéos et des commentaires.</p>
     </div>
 </div>
 
 <div id="ML">
-<a href="Mentions_legales.php" id="ml"> Mentions légales</a>
+<a href="Mentions_legales_page.html" id="ml"> Mentions légales</a>
 </div>
 </body>
 </html>
