--- a/ecommerce.html
+++ b/ecommerce.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<link rel="stylesheet" href="CSS/Qui_suis_je.css" />
+<link rel="stylesheet" href="CSS/main_project.css" />
 <link rel="stylesheet" href="CSS/menu.css" />
 <link rel="stylesheet" href="CSS/Mentions_legales.css" />
-<title>Qui suis-je ? </title>
+<title>E - commerce</title>
 </head>
 <body>
 <div id="menu">  
@@ -20,10 +20,14 @@
 </ul>
 </nav>
 </div>
-<div id=presentation>
-<div id="perso">
+<div id="home">
+<div id="description">
 <p>
-Dans le cadre de ma formation en terminale STMG option SIG, j'ai réalisé....
+Dans le cadre de ma formation en <b>terminale STMG</b> option <b>SIG</b> au <b>Lycée Polyvalent des Glières</b> à <b>Annemasse</b>, j'ai réalisé avec 3 
+de mes camarades de classes un <b>site</b> de <b>e-commerce</b> avec le <b>CMS Wordpress</b>. Si vous souhaitez en savoir plus vous pouvez jeter un oeil 
+sur la documentation ci-dessous.
+<br><br><a href="IMG/Pimpmyshoes.pdf"><button>Voir la documentation</button></a>
+<br><br>
 </p> 
 </div>
 </div>
