--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <center><img alt="photo du propriétaire du site" src="IMG/image_presentation.jpg"/><p><b>Bienvenue sur mon portfolio !<br><br>
 Je vous invite à vous diriger sur ma page <a href="Qui_suis_je.html" id="ici">Qui suis-je ?</a></b><br><br>
-<a href="IMG/cvStageBTS.pdf"><button id="cv">Télécharger cv</button></a>
+<a href="IMG/cv.pdf"><button id="cv">Télécharger cv</button></a>
 </p></center>
 </section>
 <div id="ML">
