--- a/challenge_alexa.html
+++ b/challenge_alexa.html
@@ -3,14 +3,34 @@
 <head>
 <meta charset="utf-8" />
 <title>Challenge Alexa</title>
+<link rel="stylesheet" href="CSS/main_project.css" />
+<link rel="stylesheet" href="CSS/menu.css" />
+<link rel="stylesheet" href="CSS/Mentions_legales.css" />
 </head>
 <body>
-<div>
-<?php include("menu.php");?>
-</div>
-
-<div id="ML">
-<a href="Mentions_legales.php" id="ml"> Mentions légales</a>
-</div>
+    <div id="menu">  
+        <nav id="navigation">
+            <ul id="listenonord">
+                <li class="listemenu"><a href="index.html" class="lienpages"><button class="onglet">Accueil</button></a></li>
+                <li class="listemenu"><a href="Qui_suis_je.html" class="lienpages"><button class="onglet">Qui suis-je ?</button></a></li>
+                <li class="listemenu"><a href="Mes_competences.html" class="lienpages"><button class="onglet">Compétences</button></a></li>
+                <li class="listemenu"><a href="Mes_realisations.html" class="lienpages"><button class="onglet">Réalisations</button></a></li>
+                <li class="listemenu"><a href="Veille_technologique.html" class="lienpages"><button class="onglet">Veille technologique</button></a></li>
+                <li class="listemenu"><a href="Contact.html" class="lienpages"><button class="onglet">Contact</button></a></li>
+            </ul>
+        </nav>
+    </div>
+    <div id="home">
+        <div id="description">
+            <p>
+                Dans le cadre d'un challenge proposé par les professeurs de BTS SIO, j'ai eu la chance de particper à un projet qui consiste à créer une skill
+                Alexa dont le but de cette skill est de donner un accord entre une boisson et un plat. Si vous souhaitez en savoir plus vous pouvez visiter ces liens :<br><br>
+                <a href="https://www.st-michel.fr/enseignement-superieur/actualites/challenge-sio-2020">Présentation du concept</a> et (<a href="https://wine-not.jonathan-brea.fr/">Compte-rendu</a>)
+            </p>
+        </div>
+    </div>
+    <div id="ML">
+        <a href="Mentions_legales_page.html" id="ml"> Mentions légales</a>
+    </div>
 </body>
 </html>
