--- a/Contact.html
+++ b/Contact.html
@@ -21,13 +21,13 @@
 </nav>
 </div>
 <div id="espace"></div>
-<div class="contact">
-    <div>
+<div id="contact">
+    <center><div id="top">
         <p>Vous pouvez me contacter avec mon adresse mail professionnel :<br><br>
         groussaudaxelpro@gmail.com</p>
 
-    </div>
-</div>
+    </div></center>
+
 <div id="choix">
     <center>
         <div id="blank">
@@ -36,12 +36,12 @@
     </center>
 </div>
 
-<div class="contact">
-    <div>
-        <p>Vous pouvez me contacter sur LinkedIn :<br><br>
-        <a href="https://www.linkedin.com/in/axel-groussaud-7331a018a/">Mon compte LinkedIn</a></p>
 
-    </div>
+    <center><div class="middle">
+            <p>Vous pouvez me contacter sur LinkedIn :<br><br>
+            <a href="https://www.linkedin.com/in/axel-groussaud-7331a018a/">Mon compte LinkedIn</a></p>
+
+            </div></center>
 </div>
 <div id="ML">
 <a href="Mentions_legales_page.html" id="ml"> Mentions légales</a>
