--- a/Qui_suis_je.html
+++ b/Qui_suis_je.html
@@ -20,7 +20,7 @@
 </ul>
 </nav>
 </div>
-<div id=presentation>
+<div id="presentation">
 <div id="perso">
 <p>
 <b>Bienvenue sur mon Portfolio!</b><br><br>  
