--- a/article_IA.html
+++ b/article_IA.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<link rel="stylesheet" href="CSS/Veille_technologique.css" />
+<link rel="stylesheet" href="CSS/main_project.css" />
 <link rel="stylesheet" href="CSS/menu.css" />
 <link rel="stylesheet" href="CSS/Mentions_legales.css" />
-<title>Veille technologique</title>
+<title>L'intelligence Artificielle</title>
 </head>
 <body>
 <div id="menu">  
@@ -20,22 +20,31 @@
 </ul>
 </nav>
 </div>
+<div id="home">
 <div id="article">
+    <div>
+<h1>L'intelligence Artificielle</h1><br><br>
 
-    <table class="tab">
-        <tr class="ligne">
-        <td class="cell">photo</td>
-        <td class="cell">L'intelligence artificielle</td>
-        </tr>
-        </table>
-        <div class="lienprojet">
-        <center><button class="btn"><a href="article_IA.html" class="link">en savoir plus</a></button></center>
-        </div>
+<h2>Sommaire</h2>
+
+<ul>
+    <li>Qu'est-ce que l'intelligence artificielle ?</li>
+    <li>A quoi elle sert ? Comment ?</li>
+    <li>Où est t-elle présente ?</li>
+    <li>Evolution de l'IA</li>
+    <li>Comment crée t-on une IA ?</li>
+</ul>
+
+<br><br>
+
+<p></p>
+
 </div>
-<div id="bottom">
+</div>
+</div>
 <div id="ML">
 <a href="Mentions_legales_page.html" id="ml"> Mentions légales</a>
 </div>
-</div>
+
 </body>
 </html>
