indentation code and file organization

--- a/Contact.html
+++ b/Contact.html
@@ -1,50 +1,50 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8"/>
-<link rel="stylesheet" href="CSS/Contact.css" />
-<link rel="stylesheet" href="CSS/menu.css" />
-<link rel="stylesheet" href="CSS/Mentions_legales.css" />
-<title>Contact</title>
-</head>
-<body>
-<div id="menu">  
-<nav id="navigation">
-<ul id="listenonord">
-<li class="listemenu"><a href="index.html" class="lienpages"><button class="onglet">Accueil</button></a></li>
-<li class="listemenu"><a href="Qui_suis_je.html" class="lienpages"><button class="onglet">Qui suis-je ?</button></a></li>
-<li class="listemenu"><a href="Mes_competences.html" class="lienpages"><button class="onglet">Compétences</button></a></li>
-<li class="listemenu"><a href="Mes_realisations.html" class="lienpages"><button class="onglet">Réalisations</button></a></li>
-<li class="listemenu"><a href="Veille_technologique.html" class="lienpages"><button class="onglet">Veille technologique</button></a></li>
-<li class="listemenu"><a href="Contact.html" class="lienpages"><button class="onglet">Contact</button></a></li>
-</ul>
-</nav>
-</div>
-<div id="espace"></div>
-<div id="contact">
-    <center><div id="top">
-        <p>Vous pouvez me contacter avec mon adresse mail professionnel :<br><br>
-        groussaudaxelpro@gmail.com</p>
-
-    </div></center>
-
-<div id="choix">
-    <center>
-        <div id="blank">
-            <p>OU</p>
+    <head>
+        <meta charset="utf-8"/>
+        <link rel="stylesheet" href="CSS/Contact.css" />
+        <link rel="stylesheet" href="CSS/menu.css" />
+        <link rel="stylesheet" href="CSS/Mentions_legales.css" />
+        <title>Contact</title>
+    </head>
+    <body>
+        <div id="menu">  
+            <nav id="navigation">
+                <ul id="listenonord">
+                    <li class="listemenu"><a href="index.html" class="lienpages"><button class="onglet">Accueil</button></a></li>
+                    <li class="listemenu"><a href="Qui_suis_je.html" class="lienpages"><button class="onglet">Qui suis-je ?</button></a></li>
+                    <li class="listemenu"><a href="Mes_competences.html" class="lienpages"><button class="onglet">Compétences</button></a></li>
+                    <li class="listemenu"><a href="realisations.html" class="lienpages"><button class="onglet">Réalisations</button></a></li>
+                    <li class="listemenu"><a href="Veille_technologique.html" class="lienpages"><button class="onglet">Veille technologique</button></a></li>
+                    <li class="listemenu"><a href="Contact.html" class="lienpages"><button class="onglet">Contact</button></a></li>
+                </ul>
+            </nav>
         </div>
-    </center>
-</div>
-
-
-    <center><div class="middle">
-            <p>Vous pouvez me contacter sur LinkedIn :<br><br>
-            <a href="https://www.linkedin.com/in/axel-groussaud-7331a018a/">Mon compte LinkedIn</a></p>
+        <div id="espace"></div>
+        
+            <center><div id="top">
+            <p>Vous pouvez me contacter avec mon adresse mail professionnel :<br><br>
+            groussaudaxelpro@gmail.com</p>
 
             </div></center>
-</div>
-<div id="ML">
-<a href="Mentions_legales_page.html" id="ml"> Mentions légales</a>
-</div>
-</body>
+
+            <div id="choix">
+                <center>
+                    <div id="blank">
+                        <p>OU</p>
+                    </div>
+                </center>
+            </div>
+
+
+            <center><div class="middle">
+                <p>Vous pouvez me contacter sur LinkedIn :<br><br>
+                <a href="https://www.linkedin.com/in/axel-groussaud-7331a018a/">Mon compte LinkedIn</a></p>
+
+            </div></center>
+        
+        <div id="ML">
+            <a href="Mentions_legales_page.html" id="ml"> Mentions légales</a>
+        </div>
+    </body>
 </html>
