--- a/Mes_competences.html
+++ b/Mes_competences.html
@@ -1,178 +1,178 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8" />
-<link rel="stylesheet" href="CSS/competences.css" />
-<link rel="stylesheet" href="CSS/menu.css" />
-<link rel="stylesheet" href="CSS/Mentions_legales.css" />
-<title>Compétences</title>
-</head>
-<body>
-<div id="menu">  
-<nav id="navigation">
-<ul id="listenonord">
-<li class="listemenu"><a href="index.html" class="lienpages"><button class="onglet">Accueil</button></a></li>
-<li class="listemenu"><a href="Qui_suis_je.html" class="lienpages"><button class="onglet">Qui suis-je ?</button></a></li>
-<li class="listemenu"><a href="Mes_competences.html" class="lienpages"><button class="onglet">Compétences</button></a>
-    <!--<ul id="sousmenu">
-        <li><a href="#competence-gen">Compétences générales</a></li>
-        <li><a href="#competence-dev">Compétences développement d'applications</a></li>
-        <li><a href="#competence-res">Compétences réseaux</a></li>
-    </ul>-->
-</li>
-<li class="listemenu"><a href="Mes_realisations.html" class="lienpages"><button class="onglet">Réalisations</button></a></li>
-<li class="listemenu"><a href="Veille_technologique.html" class="lienpages"><button class="onglet">Veille technologique</button></a></li>
-<li class="listemenu"><a href="Contact.html" class="lienpages"><button class="onglet">Contact</button></a></li>
-</ul>
-</nav>
+    <head>
+        <meta charset="utf-8" />
+        <link rel="stylesheet" href="CSS/competences.css" />
+        <link rel="stylesheet" href="CSS/menu.css" />
+        <link rel="stylesheet" href="CSS/Mentions_legales.css" />
+        <title>Compétences</title>
+    </head>
+    <body>
+        <div id="menu">  
+            <nav id="navigation">
+                <ul id="listenonord">
+                    <li class="listemenu"><a href="index.html" class="lienpages"><button class="onglet">Accueil</button></a></li>
+                    <li class="listemenu"><a href="Qui_suis_je.html" class="lienpages"><button class="onglet">Qui suis-je ?</button></a></li>
+                    <li class="listemenu"><a href="Mes_competences.html" class="lienpages"><button class="onglet">Compétences</button></a>
+                        <!--<ul id="sousmenu">
+                            <li><a href="#competence-gen">Compétences générales</a></li>
+                            <li><a href="#competence-dev">Compétences développement d'applications</a></li>
+                            <li><a href="#competence-res">Compétences réseaux</a></li>
+                        </ul>-->
+                    </li>
+                    <li class="listemenu"><a href="realisations.html" class="lienpages"><button class="onglet">Réalisations</button></a></li>
+                    <li class="listemenu"><a href="Veille_technologique.html" class="lienpages"><button class="onglet">Veille technologique</button></a></li>
+                    <li class="listemenu"><a href="Contact.html" class="lienpages"><button class="onglet">Contact</button></a></li>
+                </ul>
+            </nav>
 
-</div> 
+        </div> 
 
-<div id="espace"></div>
-<div id="competence-gen">
-  <h1>Mes compétences générales</h1><br>
-  <table>
-      <thead>
-          <tr>
-              <td class="other-cell">Compétences</td>
-              <td>Précisions / Logiciels utilisé</td>
-          </tr>
-      </thead>
-      <tbody>
-          <tr>
-              <td class="cell">Gestion de projets</td>
-              <td class="cell">
-                  <ul>
-                      <li>Gestion classique avec MSI Projects</li>
-                      <li>Gestion agile avec Azure DevOps</li>
-                  </ul>
-              </td>
-          </tr>
-          <tr>
-              <td class="cell">Capacité de synthèse</td>
-              <td class="cell">
-                  <ul>
-                      <li>Rédaction d'une documentation avec Microsoft Word / LibreOffice Writter</li>
-                      <li>Présentation avec Microsoft PowerPoint / LibreOffice Presentation_Impress</li>
-                  </ul>
-              </td>
-          </tr>
-          <tr>
-              <td class="cell">A l'écoute</td>
-              <td></td>
-          </tr>
-          <tr>
-            <td class="cell">Organisé</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td class="cell">Assidue</td>
-            <td></td>
-        </tr>
-      </tbody>
-  </table>
-</div>
+        <div id="espace"></div>
+        <div id="competence-gen">
+            <h1>Mes compétences générales</h1><br>
+            <table>
+                <thead>
+                    <tr>
+                        <td class="other-cell">Compétences</td>
+                        <td>Précisions / Logiciels utilisé</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="cell">Gestion de projets</td>
+                        <td class="cell">
+                            <ul>
+                                <li>Gestion classique avec MSI Projects</li>
+                                <li>Gestion agile avec Azure DevOps</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="cell">Capacité de synthèse</td>
+                        <td class="cell">
+                            <ul>
+                                <li>Rédaction d'une documentation avec Microsoft Word / LibreOffice Writter</li>
+                                <li>Présentation avec Microsoft PowerPoint / LibreOffice Presentation_Impress</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="cell">A l'écoute</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td class="cell">Organisé</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td class="cell">Assidue</td>
+                        <td></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 
-<div id="competence-dev">
-    <h1>Mes compétences en développement d'applications</h1>
-    <table>
-        <thead>
-            <tr>
-                <td class="other-cell">Compétences</td>
-                <td>Précisions / Logiciels utilisé</td>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td class="cell">Architecture</td>
-                <td class="cell">
-                    <ul>
-                        <li>MVVM en C#</li>
-                        <li>MVC en PHP</li>
-                    </ul>
-                </td>
-            </tr>
-            <tr>
-                <td class="cell">Développer une application ou un site web</td>
-                <td class="cell">
-                    <ul>
-                        <li>Site statique et dynamique</li>
-                        <li>Application en client lourd</li>
-                        <li>Framework Symfony</li>
-                        <li>Visual Studio 2019</li>
-                        <li>Visual Studio Code</li>
-                        <li>APIs avec API-Plateform</li>
-                    </ul>
-                </td>
-            </tr>
-            <tr>
-                <td class="cell">Concevoir une base de données</td>
-                <td class="cell">
-                    <ul>
-                        <li>MySQL avec MySQL Workbench</li>
+        <div id="competence-dev">
+            <h1>Mes compétences en développement d'applications</h1>
+            <table>
+                <thead>
+                    <tr>
+                        <td class="other-cell">Compétences</td>
+                        <td>Précisions / Logiciels utilisé</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="cell">Architecture</td>
+                        <td class="cell">
+                            <ul>
+                                <li>MVVM en C#</li>
+                                <li>MVC en PHP</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="cell">Développer une application ou un site web</td>
+                        <td class="cell">
+                            <ul>
+                                <li>Site statique et dynamique</li>
+                                <li>Application en client lourd</li>
+                                <li>Framework Symfony</li>
+                                <li>Visual Studio 2019</li>
+                                <li>Visual Studio Code</li>
+                                <li>APIs avec API-Plateform</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="cell">Concevoir une base de données</td>
+                        <td class="cell">
+                            <ul>
+                                <li>MySQL avec MySQL Workbench</li>
                         
-                    </ul>
-                </td>
-            </tr>
-            <tr>
-                <td class="cell">Testings</td>
-                <td class="cell">
-                    <ul>
-                        <li>Tests unitaires</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="cell">Testings</td>
+                        <td class="cell">
+                            <ul>
+                                <li>Tests unitaires</li>
                         
-                    </ul>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-</div>
+                            </ul>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 
-<div id="competence-res">
-    <h1>Mes compétences en infrastructure / DevOps</h1>
-    <table>
-        <thead>
-            <tr>
-                <td class="other-cell">Compétences</td>
-                <td>Précisions / Logiciels utilisé</td>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td class="cell">Installation et configuration d'un environnement de developpement</td>
-                <td class="cell">
-                    <ul>
-                        <li>Installer et configurer un serveur web</li>
-                        <li>Installer et configurer une base de données</li>
-                        <li>Docker</li>
-                        <li>Création d'une VM avec VMWare Workstation</li>
-                    </ul>
-                </td>
-            </tr>
-            <tr>
-                <td class="cell">Intégration continue et déploiement d'un site web ou d'une application</td>
-                <td class="cell">
-                    <ul>
-                        <li>Gitlab</li>
-                        <li>Github Actions</li>
-                    </ul>
-                </td>
-            </tr>
-            <tr>
-                <td class="cell">Audit de sécurité</td>
-                <td class="cell">
-                    <ul>
-                        <li>BurpSuite</li>
-                    </ul>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-</div>
-<div id="ML">
-<a href="Mentions_legales_page.html" id="ml"> Mentions légales</a>
-</div>
+        <div id="competence-res">
+            <h1>Mes compétences en infrastructure / DevOps</h1>
+            <table>
+                <thead>
+                    <tr>
+                        <td class="other-cell">Compétences</td>
+                        <td>Précisions / Logiciels utilisé</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="cell">Installation et configuration d'un environnement de developpement</td>
+                        <td class="cell">
+                            <ul>
+                                <li>Installer et configurer un serveur web</li>
+                                <li>Installer et configurer une base de données</li>
+                                <li>Docker</li>
+                                <li>Création d'une VM avec VMWare Workstation</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="cell">Intégration continue et déploiement d'un site web ou d'une application</td>
+                        <td class="cell">
+                            <ul>
+                                <li>Gitlab</li>
+                                <li>Github Actions</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="cell">Audit de sécurité</td>
+                        <td class="cell">
+                            <ul>
+                                <li>BurpSuite</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div id="ML">
+            <a href="Mentions_legales_page.html" id="ml"> Mentions légales</a>
+        </div>
 
-<script type="text/javascript" src="JS/jquery-3.4.1.min.js"></script>
+        <script type="text/javascript" src="JS/jquery-3.4.1.min.js"></script>
 
-</body>
+    </body>
 </html>
