--- a/Veille_technologique.html
+++ b/Veille_technologique.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8" />
-<link rel="stylesheet" href="CSS/Veille_technologique.css" />
-<link rel="stylesheet" href="CSS/menu.css" />
-<link rel="stylesheet" href="CSS/Mentions_legales.css" />
-<title>Veille technologique</title>
-</head>
-<body>
-<div id="menu">  
-<nav id="navigation">
-<ul id="listenonord">
-<li class="listemenu"><a href="index.html" class="lienpages"><button class="onglet">Accueil</button></a></li>
-<li class="listemenu"><a href="Qui_suis_je.html" class="lienpages"><button class="onglet">Qui suis-je ?</button></a></li>
-<li class="listemenu"><a href="Mes_competences.html" class="lienpages"><button class="onglet">Compétences</button></a></li>
-<li class="listemenu"><a href="Mes_realisations.html" class="lienpages"><button class="onglet">Réalisations</button></a></li>
-<li class="listemenu"><a href="Veille_technologique.html" class="lienpages"><button class="onglet">Veille technologique</button></a></li>
-<li class="listemenu"><a href="Contact.html" class="lienpages"><button class="onglet">Contact</button></a></li>
-</ul>
-</nav>
-</div>
-<div id="article">
-
-    <table class="tab">
-        <tr class="ligne">
-        <td class="cell">photo</td>
-        <td class="cell">L'intelligence artificielle</td>
-        </tr>
-        </table>
-        <div class="lienprojet">
-        <center><button class="btn"><a href="article_IA.html" class="link">en savoir plus</a></button></center>
+    <head>
+        <meta charset="utf-8" />
+        <link rel="stylesheet" href="CSS/Veille_technologique.css" />
+        <link rel="stylesheet" href="CSS/menu.css" />
+        <link rel="stylesheet" href="CSS/Mentions_legales.css" />
+        <title>Veille technologique</title>
+    </head>
+    <body>
+        <div id="menu">  
+            <nav id="navigation">
+                <ul id="listenonord">
+                    <li class="listemenu"><a href="index.html" class="lienpages"><button class="onglet">Accueil</button></a></li>
+                    <li class="listemenu"><a href="Qui_suis_je.html" class="lienpages"><button class="onglet">Qui suis-je ?</button></a></li>
+                    <li class="listemenu"><a href="Mes_competences.html" class="lienpages"><button class="onglet">Compétences</button></a></li>
+                    <li class="listemenu"><a href="realisations.html" class="lienpages"><button class="onglet">Réalisations</button></a></li>
+                    <li class="listemenu"><a href="Veille_technologique.html" class="lienpages"><button class="onglet">Veille technologique</button></a></li>
+                    <li class="listemenu"><a href="Contact.html" class="lienpages"><button class="onglet">Contact</button></a></li>
+                </ul>
+            </nav>
         </div>
-</div>
-<div id="bottom">
-<div id="ML">
-<a href="Mentions_legales_page.html" id="ml"> Mentions légales</a>
-</div>
-</div>
-</body>
+        <div id="article">
+
+            <table class="tab">
+                <tr class="ligne">
+                    <td class="cell">photo</td>
+                    <td class="cell">L'intelligence artificielle</td>
+                </tr>
+            </table>
+            <div class="lienprojet">
+                <center><button class="btn"><a href="Mes_articles/article_IA.html" class="link">en savoir plus</a></button></center>
+            </div>
+        </div>
+        <div id="bottom">
+            <div id="ML">
+                <a href="Mentions_legales_page.html" id="ml"> Mentions légales</a>
+            </div>
+        </div>
+    </body>
 </html>
