--- a/Mentions_legales_page.html
+++ b/Mentions_legales_page.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8" />
-<title>Mentions légales</title>
-<link rel="stylesheet" href="CSS/menu.css" />
-</head>
-<body>
-    <div id="menu">  
-        <nav id="navigation">
-        <ul id="listenonord">
-        <li class="listemenu"><a href="index.html" class="lienpages"><button class="onglet">Accueil</button></a></li>
-        <li class="listemenu"><a href="Qui_suis_je.html" class="lienpages"><button class="onglet">Qui suis-je ?</button></a></li>
-        <li class="listemenu"><a href="Mes_competences.html" class="lienpages"><button class="onglet">Compétences</button></a></li>
-        <li class="listemenu"><a href="Mes_realisations.html" class="lienpages"><button class="onglet">Réalisations</button></a></li>
-        <li class="listemenu"><a href="Veille_technologique.html" class="lienpages"><button class="onglet">Veille technologique</button></a></li>
-        <li class="listemenu"><a href="Contact.html" class="lienpages"><button class="onglet">Contact</button></a></li>
-        </ul>
-        </nav>
+    <head>
+        <meta charset="utf-8" />
+        <title>Mentions légales</title>
+        <link rel="stylesheet" href="CSS/menu.css" />
+    </head>
+    <body>
+        <div id="menu">  
+            <nav id="navigation">
+                <ul id="listenonord">
+                    <li class="listemenu"><a href="index.html" class="lienpages"><button class="onglet">Accueil</button></a></li>
+                    <li class="listemenu"><a href="Qui_suis_je.html" class="lienpages"><button class="onglet">Qui suis-je ?</button></a></li>
+                    <li class="listemenu"><a href="Mes_competences.html" class="lienpages"><button class="onglet">Compétences</button></a></li>
+                    <li class="listemenu"><a href="realisations.html" class="lienpages"><button class="onglet">Réalisations</button></a></li>
+                    <li class="listemenu"><a href="Veille_technologique.html" class="lienpages"><button class="onglet">Veille technologique</button></a></li>
+                    <li class="listemenu"><a href="Contact.html" class="lienpages"><button class="onglet">Contact</button></a></li>
+                </ul>
+            </nav>
         </div>
         <div>
             <div>
                 
             </div>
         </div>
-</body>
+    </body>
 </html>
