--- a/Qui_suis_je.html
+++ b/Qui_suis_je.html
@@ -1,54 +1,41 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8" />
-<link rel="stylesheet" href="CSS/Qui_suis_je.css" />
-<link rel="stylesheet" href="CSS/menu.css" />
-<link rel="stylesheet" href="CSS/Mentions_legales.css" />
-<title>Qui suis-je ? </title>
-</head>
-<body>
-<div id="menu">  
-<nav id="navigation">
-<ul id="listenonord">
-<li class="listemenu"><a href="index.html" class="lienpages"><button class="onglet">Accueil</button></a></li>
-<li class="listemenu"><a href="Qui_suis_je.html" class="lienpages"><button class="onglet">Qui suis-je ?</button></a></li>
-<li class="listemenu"><a href="Mes_competences.html" class="lienpages"><button class="onglet">Compétences</button></a></li>
-<li class="listemenu"><a href="Mes_realisations.html" class="lienpages"><button class="onglet">Réalisations</button></a></li>
-<li class="listemenu"><a href="Veille_technologique.html" class="lienpages"><button class="onglet">Veille technologique</button></a></li>
-<li class="listemenu"><a href="Contact.html" class="lienpages"><button class="onglet">Contact</button></a></li>
-</ul>
-</nav>
-</div>
-<div id="presentation">
-<div id="perso">
-<p>
-<b>Bienvenue sur mon Portfolio!</b><br><br>  
-Je m’appelle <b>Axel GROUSSAUD</b>, j’ai <b>21 ans</b>, j’<b>habite</b> à <b>Annecy le Vieux</b> et je suis <b>étudiant</b> en <b>2ème année</b> de <b>BTS SIO option SLAM au Lycée Saint Michel</b> à <b>Annecy</b> après avoir <b>obtenu</b> un <b>baccalauréat STMG option SIG</b> en <b>2019</b>.<br><br> 
-En tant que <b>joueur de jeux vidéos amateur</b>, depuis que je <b>muscle</b> mes <b>doigts</b> (surtout les <b>pouces</b>), je suis <b>passionné</b> par le <b>développement</b> et <b>comprendre comment</b> est <b>créée</b> une <b>application</b>. <br><br>
-J’aime  également faire des <b>randonnées</b> à <b>pied</b>, en <b>vélos</b> et en <b>roller</b>, histoire de prendre l’air !<br><br>
-Je suis <b>créatif</b>, <b>persévérant</b> et <b>organisé.</b> <br><br>
-Je vous <b>invite</b> à <b>mieux</b> me <b>connaître</b> en <b>visitant</b> mes <b>pages…</b> 
-</p> 
-</div>
-</div>
-<!--
-<table id="tabperso">
-<tr>
-<td width="50%"  id="infos">
-<p id="adresse">181 route des paquis <br>74800 Amancy <br>France<br>0771243608<br>groussaudaxelpro@gmail.com</p>
-</td>
-<td width="50%">
-<div>
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10468.424291547746!2d6.3226472881285485!3d46.074584193408555!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478c74d155124f67%3A0x959e0af76dd1e267!2s74800%20Amancy!5e0!3m2!1sfr!2sfr!4v1581121866788!5m2!1sfr!2sfr" width="670" height="500" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-</div>
-</td>
-</tr>
-</table>
--->
-<div id="ML">
-<a href="Mentions_legales_page.html" id="ml"> Mentions légales</a>
-</div>
+    <head>
+        <meta charset="utf-8" />
+        <link rel="stylesheet" href="CSS/Qui_suis_je.css" />
+        <link rel="stylesheet" href="CSS/menu.css" />
+        <link rel="stylesheet" href="CSS/Mentions_legales.css" />
+        <title>Qui suis-je ? </title>
+    </head>
+    <body>
+        <div id="menu">  
+            <nav id="navigation">
+                <ul id="listenonord">
+                    <li class="listemenu"><a href="index.html" class="lienpages"><button class="onglet">Accueil</button></a></li>
+                    <li class="listemenu"><a href="Qui_suis_je.html" class="lienpages"><button class="onglet">Qui suis-je ?</button></a></li>
+                    <li class="listemenu"><a href="Mes_competences.html" class="lienpages"><button class="onglet">Compétences</button></a></li>
+                    <li class="listemenu"><a href="realisations.html" class="lienpages"><button class="onglet">Réalisations</button></a></li>
+                    <li class="listemenu"><a href="Veille_technologique.html" class="lienpages"><button class="onglet">Veille technologique</button></a></li>
+                    <li class="listemenu"><a href="Contact.html" class="lienpages"><button class="onglet">Contact</button></a></li>
+                </ul>
+            </nav>
+        </div>
+        <div id="presentation">
+            <div id="perso">
+                <p>
+                    <b>Bienvenue sur mon Portfolio!</b><br><br>  
+                    Je m’appelle <b>Axel GROUSSAUD</b>, j’ai <b>21 ans</b>, j’<b>habite</b> à <b>Annecy le Vieux</b> et je suis <b>étudiant</b> en <b>2ème année</b> de <b>BTS SIO option SLAM au Lycée Saint Michel</b> à <b>Annecy</b> après avoir <b>obtenu</b> un <b>baccalauréat STMG option SIG</b> en <b>2019</b>.<br><br> 
+                    En tant que <b>joueur de jeux vidéos amateur</b>, depuis que je <b>muscle</b> mes <b>doigts</b> (surtout les <b>pouces</b>), je suis <b>passionné</b> par le <b>développement</b> et <b>comprendre comment</b> est <b>créée</b> une <b>application</b>. <br><br>
+                    J’aime  également faire des <b>randonnées</b> à <b>pied</b>, en <b>vélos</b> et en <b>roller</b>, histoire de prendre l’air !<br><br>
+                    Je suis <b>créatif</b>, <b>persévérant</b> et <b>organisé.</b> <br><br>
+                    Je vous <b>invite</b> à <b>mieux</b> me <b>connaître</b> en <b>visitant</b> mes <b>pages…</b> 
+                </p> 
+            </div>
+        </div>
 
-</body>
+        <div id="ML">
+            <a href="Mentions_legales_page.html" id="ml"> Mentions légales</a>
+        </div>
+
+    </body>
 </html>
