finish contact tab

--- a/Contact.html
+++ b/Contact.html
@@ -20,29 +20,29 @@
                 </ul>
             </nav>
         </div>
-        <div id="espace"></div>
         
-            <center><div id="top">
-            <p>Vous pouvez me contacter avec mon adresse mail professionnel :<br><br>
-            groussaudaxelpro@gmail.com</p>
+        <div id="espace">
+            <center><div id="mail">
+                <p>Vous pouvez me contacter avec mon adresse mail professionnel :<br><br>
+                groussaudaxelpro@gmail.com</p>
 
             </div></center>
 
             <div id="choix">
                 <center>
                     <div id="blank">
-                        <p>OU</p>
+                        <p id="black">OU</p>
                     </div>
                 </center>
             </div>
 
 
-            <center><div class="middle">
+            <center><div id="linkedin">
                 <p>Vous pouvez me contacter sur LinkedIn :<br><br>
                 <a href="https://www.linkedin.com/in/axel-groussaud-7331a018a/">Mon compte LinkedIn</a></p>
 
             </div></center>
-        
+        </div>
         <div id="ML">
             <a href="Mentions_legales_page.html" id="ml"> Mentions légales</a>
         </div>
